Signed-off-by: chengheai <842385139@qq.com>

--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,15 @@ html, body, :global(#root) {
 :global(.my-flex-item) button{
   margin: 5px;
 }
+:global(.my-flex-item) a{
+  margin: 5px;
+}
+:global(.my-flex-item) span{
+  margin-right: 5px;
+}
+:global(.flex-center-center){
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
